--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make SocketServer threaded by using ThreadingMixIn for better performance.
+  [fredvd]
 
 
 1.0.2 (2015-01-21)
